[package]
authors = ["Rafael Lemos <contact@flemosr.com"]
name = "extauthz"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
deadpool-redis = "0.16"
envoy-types = "0.5"
redis = { version = "0.26", features = ["tokio-comp"] }
tokio = { version = "1.39", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
tonic = "0.12"
