[package]
authors = ["Rafael Lemos <contact@flemosr.com"]
name = "extauthz"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
deadpool-redis = "0.18"
envoy-types = "0.5.4"
redis = { version = "0.27", features = ["tokio-comp"] }
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
tonic = "0.12.3"
