[package]
authors = ["Rafael Lemos <contact@flemosr.com"]
name = "extauthz"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
deadpool-redis = "0.22"
envoy-types = "0.7.1"
redis = { version = "0.32", features = ["tokio-comp"] }
tokio = { version = "1.47", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
tonic = "0.14"
